Fix table spacing so the thead isn't separated

--- a/assets/css/contents.scss
+++ b/assets/css/contents.scss
@@ -1,6 +1,14 @@
 ---
 ---
 
+table {
+    table-layout: fixed !important;
+}
+
+th, thead {
+    display: none !important;
+}
+
 
 td {
     border-collapse: collapse !important;
