--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -91,12 +91,6 @@ h5 {
     font-size:larger
 }
 
-table {
-    margin: 6px;
-    border-collapse: separate;
-    border-spacing: 0 1em;
-}
-
 #breadcrumbs {
     display: grid;
     grid-template-areas: 'left right';
